--- a/app/views/layouts/ost.erb
+++ b/app/views/layouts/ost.erb
@@ -96,7 +96,7 @@
 
 <script type="text/javascript">
   $(function () {
-    $( window ).load( function () {
+    $( window ).on('load', function () {
       setTimeout(function () {
         //Load typekit fonts.
         $('head').append('<link rel="stylesheet" href="https://use.typekit.net/lde7yjs.css" />');
