--- a/app/views/web/ost/roadmap.html.erb
+++ b/app/views/web/ost/roadmap.html.erb
@@ -1,3 +1,4 @@
 <%= render :partial => "/shared/web/common/navbarsubmenu" %>
 <%= render :partial => "/web/ost/roadmap/desktop" %>
 <%= render :partial => "/web/ost/roadmap/mobile" %>
+<%= render :partial => "/web/ost/roadmap/roadmap_svg_sprite" %>
