--- a/app/views/web/ost/roadmap/_desktop.erb
+++ b/app/views/web/ost/roadmap/_desktop.erb
@@ -1,494 +1,29 @@
-<div class="container roadmap-container d-none d-md-block">
-  <div class="row d-flex justify-content-center">
+<div class="d-none d-md-block">
 
-    <div class="col-12 col-md-8">
-      <div class="row">
-        <svg width="100%" height="100%" viewBox="0 0 830 98" xmlns="http://www.w3.org/2000/svg">
-          <g stroke-width="3" fill="none" fill-rule="evenodd">
-            <path class="path-right" d="M828 96.589c0-26.673-21.572-48.295-48.183-48.295H463.183C436.573 48.294 415 26.672 415 0"/>
-            <path class="path" d="M415 97.598V1.274"/>
-            <path class="path-left" d="M415 0c0 26.672-21.572 48.294-48.183 48.294H50.183C23.573 48.294 2 69.916 2 96.59" />
-          </g>
-        </svg>
-      </div>
-    </div>
+  <%= render :partial => "/web/ost/roadmap/desktop/jumbotron" %>
 
-  </div>
+  <%= render :partial => "/web/ost/roadmap/desktop/quarters" %>
 
-  <div class="row">
-    <div class="col-12">
-      <div class="row">
+  <div class="container roadmap-container">
 
-        <div class="col-4">
-          <div class="container-content elementToAnimate">
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-          </div>
-        </div>
+    <%= render :partial => "/web/ost/roadmap/desktop/roadmap-categories" %>
 
-        <div class="col-4">
-          <div class="container-content elementToAnimate">
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-          </div>
-        </div>
+    <%= render :partial => "/web/ost/roadmap/desktop/2017-q4" %>
 
-        <div class="col-4">
-          <div class="container-content elementToAnimate">
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-          </div>
-        </div>
+    <%= render :partial => "/web/ost/roadmap/desktop/2018-q1" %>
 
-      </div>
-    </div>
-  </div>
+    <%= render :partial => "/web/ost/roadmap/desktop/2018-q2" %>
 
-  <div class="row">
-    <div class="col-12 mt-5">
-      <div class="container-content">
-        Vertical Left-Right Timeline
-        1
-        Fully Responsive
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-      </div>
-    </div>
-  </div>
+    <%= render :partial => "/web/ost/roadmap/desktop/2018-q3" %>
 
-  <div class="row">
-    <div class="col-12">
-      <div class="row bg-h-border">
-        <div class="col-4 bg-line first py-5 d-flex align-items-center">
-          <div class="container-content">
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-            Vertical Left-Right Timeline
-            <p class="collapse m-0" id="block-id">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi tempore asperiores et vel
-            </p>
+    <%= render :partial => "/web/ost/roadmap/desktop/2018-q4" %>
 
-            <!-- aria-expanded attribute is mandatory -->
-            <!-- bootstrap changes it to true/false on toggle -->
-            <a href="#block-id"
-               class="d-block"
-               data-toggle="collapse"
-               aria-expanded="false"
-               aria-controls="block-id">
-                <span class="collapsed">Show more</span>
-                <span class="expanded">Show Less</span>
-            </a>
-          </div>
-        </div>
-        <div class="col-4 bg-line second py-5 d-flex align-items-center">
-          <div class="container-content">
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-            Vertical Left-Right Timeline
-          </div>
-        </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
-      </div>
-    </div>
-  </div>
+    <%= render :partial => "/web/ost/roadmap/desktop/2019-q1" %>
 
-  <div class="row">
-    <div class="col-12">
-      <div class="container-content">
-        Vertical Left-Right Timeline
-        1
-        Fully Responsive
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-      </div>
-    </div>
-  </div>
+    <%= render :partial => "/web/ost/roadmap/desktop/2019-q2" %>
 
-  <div class="row">
-    <div class="col-12">
-      <div class="row bg-h-border">
-        <div class="col-4 d-flex flex-column">
-          <div class="row bg-line first">
-            <div class="col-12 pt-5"></div>
-          </div>
-          <div class="row h-100">
-            <div class="col-12">
-              <div class="row h-100">
-                <div class="col-12 d-flex flex-column">
-                  <div class="row">
-                    <div class="col-12 col-md-6 mx-auto p-0" style="font-size: 0">
-                      <svg width="100%" height="100%" viewBox="0 0 211 101" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M209 100.068V70.693c0-16.268-12.987-29.455-29.007-29.455h-49.182c-22.429 0-25.181-18.463-25.181-41.238 0 22.775-2.753 41.238-25.181 41.238H31.007C14.987 41.238 2 54.425 2 70.693v29.375" stroke="#D3E3E5" stroke-width="3" fill="none" fill-rule="evenodd"/>
-                      </svg>
-                    </div>
-                  </div>
-                  <div class="row" style="flex: 1">
-                    <div class="col-6 bg-line first">
-                      <div class="container-content">
-                        Fully Responsive
-                        Lorem ipsum dolor sit amet
-                        Fully Responsive
-                        Lorem ipsum dolor sit amet
-                      </div>
-                    </div>
-                    <div class="col-6 bg-line first">
-                      <div class="container-content">
-                        Fully Responsive
-                        Lorem ipsum dolor sit amet
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-6 bg-line pb-5 first"></div>
-            <div class="col-6 bg-line pb-5 first"></div>
-          </div>
-        </div>
-        <div class="col-4 bg-line second py-5 d-flex align-items-center">
-          <div class="container-content">
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-          </div>
-        </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
-      </div>
-    </div>
-  </div>
+    <%= render :partial => "/web/ost/roadmap/desktop/2019-q3" %>
 
-  <div class="row">
-    <div class="col-12">
-      <div class="container-content">
-        Vertical Left-Right Timeline
-        1
-        Fully Responsive
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-      <div class="row bg-h-border">
-        <div class="col-4">
-          <div class="row h-100">
-            <div class="col-12">
-              <div class="row h-100">
-                <div class="col-6 bg-line first"></div>
-                <div class="col-6 bg-line first"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-4 bg-line second py-5 d-flex align-items-center">
-          <div class="container-content">
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-            Vertical Left-Right Timeline
-          </div>
-        </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-      <div class="container-content">
-        Vertical Left-Right Timeline
-        1
-        Fully Responsive
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-      <div class="row bg-h-border">
-        <div class="col-4">
-          <div class="row h-100">
-            <div class="col-12">
-              <div class="row h-100">
-                <div class="col-6 bg-line first py-5 d-flex align-items-center">
-                  <div class="container-content">
-                    Vertical Left-Right Timeline Vertical Left-Right Timeline
-                  </div>
-                </div>
-                <div class="col-6 bg-line first py-5 d-flex align-items-center">
-                  <div class="container-content">
-                    Vertical Left-Right Timeline Vertical Left-Right Timeline
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-4 bg-line second py-5 d-flex align-items-center">
-          <div class="container-content">
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-            Vertical Left-Right Timeline
-          </div>
-        </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-      <div class="container-content">
-        Vertical Left-Right Timeline
-        1
-        Fully Responsive
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-      <div class="row bg-h-border">
-        <div class="col-4">
-          <div class="row h-100">
-            <div class="col-12">
-              <div class="row h-100">
-                <div class="col-6 bg-line first py-5 d-flex align-items-center">
-                  <div class="container-content">
-                    Vertical Left-Right Timeline Vertical Left-Right Timeline
-                    Vertical Left-Right Timeline Vertical Left-Right Timeline
-                    Vertical Left-Right Timeline Vertical Left-Right Timeline
-                  </div>
-                </div>
-                <div class="col-6 bg-line first py-5 d-flex align-items-center"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-4 bg-line second py-5 d-flex align-items-center">
-          <div class="container-content">
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-            Vertical Left-Right Timeline
-          </div>
-        </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex">
-          <div class="container-content">
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-            Vertical Left-Right Timeline
-
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-            Vertical Left-Right Timeline
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-      <div class="container-content">
-        Vertical Left-Right Timeline
-        1
-        Fully Responsive
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-      <div class="row bg-h-border">
-        <div class="col-4">
-          <div class="row h-100">
-            <div class="col-12">
-              <div class="row h-100">
-                <div class="col-6 bg-line first py-5 d-flex align-items-center"></div>
-                <div class="col-6 bg-line first py-5 d-flex align-items-center"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-4 bg-line second py-5 d-flex align-items-center">
-          <div class="container-content">
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-          </div>
-        </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex">
-          <div class="container-content">
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-      <div class="container-content">
-        Vertical Left-Right Timeline
-        1
-        Fully Responsive
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-8">
-      <div class="row">
-        <div class="col-12">
-          <div class="row">
-            <div class="col-3 bg-line first py-5"></div>
-            <div class="col-3 bg-line first py-5"></div>
-            <div class="col-6 bg-line second py-5"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-4">
-      <div class="row">
-        <div class="col-12 bg-line third py-5"></div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-      <div class="row">
-        <div class="col-8">
-          <div class="container-content">
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-          </div>
-        </div>
-        <div class="col-4 bg-line third"></div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-8">
-      <div class="row">
-        <div class="col-12">
-          <div class="row">
-            <div class="col-3 bg-line first py-5"></div>
-            <div class="col-3 bg-line first py-5"></div>
-            <div class="col-6 bg-line second py-5"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-4">
-      <div class="row">
-        <div class="col-12 bg-line third py-5"></div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-      <div class="container-content">
-        Vertical Left-Right Timeline
-        1
-        Fully Responsive
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-8">
-      <div class="row">
-        <div class="col-12">
-          <div class="row">
-            <div class="col-3 bg-line first py-5"></div>
-            <div class="col-3 bg-line first py-5"></div>
-            <div class="col-6 bg-line second py-5"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-4">
-      <div class="row">
-        <div class="col-12 bg-line third py-5"></div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-      <div class="row">
-        <div class="col-8">
-          <div class="container-content">
-            Vertical Left-Right Timeline
-            1
-            Fully Responsive
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor gravida aliquam. Morbi orci urna, iaculis in ligula et, posuere interdum lectus.
-          </div>
-        </div>
-        <div class="col-4 bg-line third"></div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-8">
-      <div class="row">
-        <div class="col-12">
-          <div class="row">
-            <div class="col-3 bg-line first py-5"></div>
-            <div class="col-3 bg-line first py-5"></div>
-            <div class="col-6 bg-line second py-5"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-4">
-      <div class="row">
-        <div class="col-12 bg-line third py-5"></div>
-      </div>
-    </div>
   </div>
 
 </div>
