adding openst protocol and mosaic protocol in the white paper dropdown

--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -101,15 +101,29 @@
                 <span class="pl-2">Roadmap</span>
               </a>
             </li>
-            <li>
-              <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" target="_blank" class="nav-svg-link d-flex align-items-center" title="White Paper">
-                <svg class="nav-svg">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-white-paper-icon"></use>
-                  </switch>
-                </svg>
-                <span class="pl-2">White Paper</span>
-              </a>
+            <li><a href="javascript:void(0)" class="nav-svg-link d-flex align-items-center">
+              <svg class="nav-svg">
+                <switch>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-white-paper-icon"></use>
+                </switch>
+              </svg>
+              <span class="pl-2">White Paper</span>
+              <span class="drop-icon drop-icon-right"></span>
+              <label title="Toggle Drop-down" class="drop-icon drop-icon-right navbar-toggler" for="devChallenges" data-toggle="collapse" data-target="#navbarToggler6" aria-controls="navbarToggler6" aria-expanded="false" aria-label="Toggle navigation"></label>
+            </a>
+              <input type="checkbox" id="devChallenges">
+              <ul class="sub-menu list-unstyled pt-2 px-3 px-md-1 m-0 collapse" id="navbarToggler6">
+                <li>
+                  <a href="https://drive.google.com/file/d/0Bwgf8QuAEOb7Z2xIeUlLd21DSjQ/view" target="_blank" class="nav-svg-link d-flex align-items-center" title="OpenSt Protocol">
+                    <span class="pl-2">OpenSt Protocol</span>
+                  </a>
+                </li>
+                <li class="mb-0 mb-md-2">
+                  <a href="https://github.com/OpenSTFoundation/mosaic-contracts/blob/develop/docs/mosaicv0.pdf" target="_blank" class="nav-svg-link d-flex align-items-center" title="Mosaic Protocol">
+                    <span class="pl-2">Mosaic Protocol</span>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li>
               <a href="https://github.com/OpenSTFoundation" target="_blank" class="nav-svg-link d-flex align-items-center" title="Github">
