--- a/app/views/web/ost/index/_buy_ost.erb
+++ b/app/views/web/ost/index/_buy_ost.erb
@@ -24,11 +24,11 @@
               </div>
             </div>
             <div class="col-xs-12 col-md-4 col-lg-3 align-self-end">
-              <a class="d-inline-block" href="https://www.huobi.pro/ost_eth/exchange/" target="_blank" title="Buy OST on Huobi">
+              <a class="d-inline-block" href="https://www.hbg.com/ost_eth/exchange/" target="_blank" title="Buy OST on Huobi">
                 <span class="buy-ost-huobi-icon"></span>
               </a>
               <div class="btn-container mt-4 mb-5">
-                <a href="https://www.huobi.pro/ost_eth/exchange/" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
+                <a href="https://www.hbg.com/ost_eth/exchange/" target="_blank" class="btn btn-primary" title="BUY NOW">BUY NOW</a>
               </div>
             </div>
           </div>
