--- a/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
+++ b/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
@@ -22,7 +22,8 @@
   </div>
 </div>
 
-<div class="row">
+<div class="categoriesToAnimatePhantom"></div>
+<div class="row categoriesToAnimateWrapper">
   <div class="col-12">
     <div class="row">
 
