--- a/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
+++ b/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
@@ -32,7 +32,7 @@
           <div class="row h-100">
             <div class="col-8 align-self-center pr-0 category">
               <div class="title first">Infrastructure</div>
-              <p class="desc">Solves scalability challenges of Ethereum while enabling white-label tokens.</p>
+              <p class="desc">Enables scalable decentralized token economies.</p>
             </div>
             <div class="col-4">
               <svg class="h-100 w-100 d-block">
@@ -50,7 +50,7 @@
           <div class="row h-100">
             <div class="col-8 align-self-center pr-0 category">
               <div class="title second">Developer Tools</div>
-              <p class="desc">Developer APIs and SDK for plug and play integration along with blockchain management tools</p>
+              <p class="desc">APIs, SDKs, and dashboards for integrating and managing Branded Tokens.</p>
             </div>
             <div class="col-4">
               <svg class="h-100 w-100 d-block">
@@ -68,7 +68,7 @@
           <div class="row h-100">
             <div class="col-8 align-self-center pr-0 category">
               <div class="title third">Btx Exchange</div>
-              <p class="desc">Solved liquidity between tokens, across blockchains, with currencies.</p>
+              <p class="desc">Liquidity solutions between tokens, across blockchains, and with fiat currencies.</p>
             </div>
             <div class="col-4">
               <svg class="h-100 w-100 d-block">
