--- a/app/views/web/ost/roadmap/desktop/_2020-q4.erb
+++ b/app/views/web/ost/roadmap/desktop/_2020-q4.erb
@@ -1,4 +1,4 @@
-<div class="q-elements" id="2019-q3">
+<div class="q-elements" id="2020-q4">
   <div class="row quarters-year-row">
     <div class="col-12">
       <div class="container-content pt-1 pb-0">
@@ -7,7 +7,7 @@
             <div class="row">
               <div class="col-9 ml-auto text-center pr-0">
                 <span class="year">2018</span>
-                <span class="quarter">Q3</span>
+                <span class="quarter">Q4</span>
               </div>
             </div>
           </div>
@@ -18,8 +18,8 @@
               </switch>
             </svg>
           </div>
-          <div class="col-7 align-self-center pl-0">
-            <span class="text-bold">200+ developer</span> teams integrating OST Alpha 3 into their apps. Publish framework for scaling token economies.
+          <div class="col-7 align-self-center">
+            <span class="text-bold">OpenST Protocol released for developers</span> to build infrastructure and tools to enable token economies.
           </div>
         </div>
       </div>
@@ -35,8 +35,8 @@
               <div class="row h-100">
                 <div class="col-6 bg-line first py-5 d-flex align-items-center">
                   <div class="container-content p-15-10">
-                    <div class="text-bold">OpenST Protocol</div>
-                    <div class="status">Status: In Progress</div>
+                    <div class="text-bold">OpenST Protocol 0.9.4</div>
+                    <div class="status">Status: Upcoming</div>
                     <ul class="list-unstyled social-icons mb-2">
                       <li>
                         <a href="">
@@ -49,27 +49,40 @@
                       </li>
                     </ul>
                     <ul class="desc-lines">
-                      <li>0.9.3  Cross-chain token-messaging</li>
+                      <li>Decentralized keys engine & token rules engine</li>
                     </ul>
-                  </div>
-                </div>
-                <div class="col-6 bg-line first py-5 d-flex align-items-center">
-                  <div class="container-content p-15-10">
-                    <div class="text-bold">OpenST Mosaic R&D</div>
-                    <div class="status">Status: In Progress</div>
+                    <div class="mt-3 mb-2 flag-icon">
+                      <svg class="mx-auto d-block">
+                        <switch>
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#roadmap-small-flag"></use>
+                        </switch>
+                      </svg>
+                    </div>
+                    <div class="text-bold">OpenST Protocol 0.9.4</div>
+                    <div class="status">Status: Upcoming</div>
                     <ul class="desc-lines">
-                      <li>Scalable PoS Blockchains Finalized on Ethereum</li>
+                      <li>Mainnet Alpha</li>
                     </ul>
-                    <a href="" class="d-block more-desc" target="_blank">Read more</a>
+
                   </div>
                 </div>
+                <div class="col-6 bg-line first py-5 d-flex align-items-center"></div>
               </div>
             </div>
           </div>
         </div>
         <div class="col-4 bg-line second py-5 d-flex align-items-center">
           <div class="container-content">
-            <div class="text-bold">OST KIT Alpha 3</div>
+            <div class="text-bold">OST KIT Alpha 4</div>
+            <div class="status">Status: Upcoming</div>
+            <ul class="desc-lines">
+              <li>Scalability & Performance Upgrades & Testing. Multi-Chain</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-4 bg-line third py-5 align-items-center d-flex">
+          <div class="container-content">
+            <div class="text-bold text-uppercase">Exchange</div>
             <div class="status">Status: In Progress</div>
             <ul class="list-unstyled social-icons mb-2">
               <li>
@@ -83,11 +96,10 @@
               </li>
             </ul>
             <ul class="desc-lines">
-              <li>Wallet-lite Ledger & Balance APIs</li>
+              <li>Redeem BT for OST</li>
             </ul>
           </div>
         </div>
-        <div class="col-4 bg-line third py-5 align-items-center d-flex"></div>
       </div>
     </div>
   </div>
