--- a/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
+++ b/app/views/web/ost/roadmap/desktop/_roadmap-categories.erb
@@ -22,16 +22,16 @@
   </div>
 </div>
 
-<div class="categoriesToAnimatePhantom"></div>
-<div class="row categoriesToAnimateWrapper">
-  <div class="col-12">
-    <div class="row">
+<div class="categoriesToAnimateMainContainer" >
+  <div class="row categoriesToAnimateWrapper">
+  <div class="col-12 categoriesToAnimateContainer">
+    <div class="row h-100">
 
       <div class="col-4 d-flex">
         <div class="container-content categoriesToAnimate py-0 pl-3 pr-0">
           <div class="row h-100">
-            <div class="col-8 align-self-center pr-0 category">
-              <div class="title first">Infrastructure</div>
+            <div class="col-8 pr-0 category">
+              <div class="title first pt-3">Infrastructure</div>
               <p class="desc">Enables scalable decentralized token economies.</p>
             </div>
             <div class="col-4">
@@ -48,8 +48,8 @@
       <div class="col-4 d-flex">
         <div class="container-content categoriesToAnimate py-0 pl-3 pr-1">
           <div class="row h-100">
-            <div class="col-8 align-self-center pr-0 category">
-              <div class="title second">Developer Tools</div>
+            <div class="col-8 pr-0 category">
+              <div class="title second pt-3">Developer Tools</div>
               <p class="desc">APIs, SDKs, and dashboards for integrating and managing Branded Tokens.</p>
             </div>
             <div class="col-4">
@@ -66,8 +66,8 @@
       <div class="col-4 d-flex">
         <div class="container-content categoriesToAnimate py-0 pl-3">
           <div class="row h-100">
-            <div class="col-8 align-self-center pr-0 category">
-              <div class="title third">Btx Exchange</div>
+            <div class="col-8  pr-0 category">
+              <div class="title third pt-3">Btx Exchange</div>
               <p class="desc">Liquidity solutions between tokens, across blockchains, and with fiat currencies.</p>
             </div>
             <div class="col-4">
@@ -83,4 +83,5 @@
 
     </div>
   </div>
+</div>
 </div>
