help video modal

--- a/app/views/web/ost/roadmap.html.erb
+++ b/app/views/web/ost/roadmap.html.erb
@@ -2,3 +2,4 @@
 <%= render :partial => "/web/ost/roadmap/desktop" %>
 <%= render :partial => "/web/ost/roadmap/mobile" %>
 <%= render :partial => "/web/ost/roadmap/roadmap_svg_sprite" %>
+<%= render :partial => "shared/web/modals/help_video" %>
